--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- section header -->
     <header>
         <div class="logo">
-            <img src="images/logo.png" alt="logo" width="200">
+            <img src="logo.png" alt="logo" width="200">
         </div>
         <nav class="navbars">
             <ul>
@@ -32,7 +32,7 @@
     <!-- section banmer -->
     <div class="main">
         <div class="banner">
-            <img src="/images/banner.jpg" alt="banner" width="100%">
+            <img src="banner.jpg" alt="banner" width="100%">
         </div>
         <div class="cards">
             <div class="card1">
@@ -68,12 +68,12 @@
             <button type="button">Read More</button>
         </div>
         <div class="img1">
-            <img src="/images/man2.jpg" alt="man">
+            <img src="man2.jpg" alt="man">
         </div>
     </div>
     <div class="blog2">
         <div class="img2">
-            <img src="images/girl.jpg" alt="girl">
+            <img src="girl.jpg" alt="girl">
         </div>
         <div class="blog1">
             <h2>Swim lessons for Children and teens</h2>
@@ -87,7 +87,7 @@
     <!-- section backgroung  -->
     <div class="bg">
         <div class="banner2">
-            <img src="images/banner2.jpg" alt="man" width="1349" height="600">
+            <img src="banner2.jpg" alt="man" width="1349" height="600">
         </div>
         <div class="heading">
             <h2>Why Our Swimming School is Rated #1 in The Region</h2>
@@ -106,38 +106,38 @@
         <div class="heading2">
             <h2>Our Events</h2>
             <div class="icon">
-                <img src="images/Ellipse.png" alt="arrow">
+                <img src="Ellipse.png" alt="arrow">
                 <p>Lorem ipsum dolor sit amet, consectetur</p>
             </div>
 
             <div class="icon">
-                <img src="images/Ellipse.png" alt="arrow">
+                <img src="Ellipse.png" alt="arrow">
                 <p>Xng elit, sed do eiusmod tempor incilabore</p>
             </div>
 
             <div class="icon">
-                <img src="images/Ellipse.png" alt="arrow">
+                <img src="Ellipse.png" alt="arrow">
                 <p>Lorem ipsum dolor sit amet, consectetur</p>
             </div>
 
             <div class="icon">
-                <img src="images/Ellipse.png" alt="arrow">
+                <img src="Ellipse.png" alt="arrow">
                 <p>Drices gravida. Risus commodo viverra</p>
             </div>
 
             <div class="icon">
-                <img src="images/Ellipse.png" alt="arrow">
+                <img src="Ellipse.png" alt="arrow">
                 <p>Maecenas accumsan lacus vel facilisis. </p>
             </div>
         </div>
         <div class="card-girl">
-            <img src="/images/girl2.jpg" alt="girl" width="600" height="425">
+            <img src="girl2.jpg" alt="girl" width="600" height="425">
         </div>
     </div>
 
     <div class="tranner">
         <div class="group">
-            <img src="images/anne.jpg" alt="anne" width="182" height="182">
+            <img src="anne.jpg" alt="anne" width="182" height="182">
             <div class="info">
                 <p class="page">Thank you for making me a confident swimmer! I hope to learn more from the school’s
                     instructors during future lessons.</p>
@@ -146,7 +146,7 @@
         </div>
 
         <div class="group">
-            <img src="images/sam.jpg" alt="sam" width="182" height="182">
+            <img src="sam.jpg" alt="sam" width="182" height="182">
             <div class="info">
                 <p class="page">I hated swimming until I joined this swimming school. Their lessons improved my swimming
                     and breathing skills.</h2>
@@ -155,7 +155,7 @@
         </div>
 
         <div class="group">
-            <img src="images/peter.jpg" alt="peter" width="182" height="182">
+            <img src="peter.jpg" alt="peter" width="182" height="182">
             <div class="info">
                 <p class="page">I have been going here for swimming lessons for over 3 years and it helped me become a
                     better swimmer.</p>
@@ -164,7 +164,7 @@
         </div>
 
         <div class="group">
-            <img src="images/jane.jpg" alt="jane" width="182" height="182">
+            <img src="jane.jpg" alt="jane" width="182" height="182">
             <div class="info">
                 <p class="page">Joining this school has changed my life as I was afraid of water before but now I like
                     it a lot thanks to your lessons.</p>
@@ -188,7 +188,7 @@
             </div>
         </div>
         <div class="map">
-            <img src="images/map.jpg" alt="map">
+            <img src="map.jpg" alt="map">
         </div>
     </div>
 
@@ -200,8 +200,8 @@
 
 
 
-    <script src="js/jquery-3.7.1.min.js"></script>
-    <script src="js/script.js"></script>
+    <script src="jquery-3.7.1.min.js"></script>
+    <script src="script.js"></script>
 
 
 </body>
